2001-09-10  jacob berkman  <jacob@ximian.com>

	* Makefile.am: install gnome.h in $prefix/include/gnome-2.0/

	* gnome.h: compatability header to make porting simpler

2001-09-08  jacob berkman  <jacob@ximian.com>

	* gnome-dialog.h: include gtkstock.h (needed for gtk stock
	fallbacks)

	* gnome-icon-entry.h: include gmacros.h

	* libgnomeui-2.0.pc.in (Libs): pull in SM_LIBS

	* Makefile.am (libgnomeui_2_la_LIBADD): add SM_LIBS.

Sat Sep 08 02:05:35 2001  George Lebl <jirka@5z.com>

	* gnome-about.[ch]: privatize and use gnome-macros

Fri Sep 07 14:35:57 2001  George Lebl <jirka@5z.com>

	* libgnomeuiP.h: include the right libgnome.h

Fri Sep 07 14:25:20 2001  George Lebl <jirka@5z.com>

	* libgnomeui-2.0.pc.in, Makefile.am: the libgnomeui are in the
	  gnome-2.0 dir now, just like libgnome ones.

Fri Sep 07 14:15:18 2001  George Lebl <jirka@5z.com>

	* Makefile.am: libgnomeui.h installs in the libgnomeui prefix now

	* gnome-app-helper.c: add some scrollkeeper magic to build the help
	  menu

2001-09-07  jacob berkman  <jacob@ximian.com>

	* gnome_segv.c: 
	* gnome-ui-init.c: 
	* gnome-gconf-ui.c: <libgnome(ui).h> -=>
	<libgnome(ui)/libgnome(ui).h>

2001-09-05  Jonathan Blandford  <jrb@redhat.com>

	* gnome-app.c: (gnome_app_new):
	* gnome-appbar.c: (gnome_appbar_get_type),
	(gnome_appbar_class_init), (gnome_appbar_new):
	* gnome-appbar.h:
	* gnome-client.c: (client_save_yourself_callback),
	(gnome_client_get_type), (gnome_client_class_init),
	(gnome_client_new_without_connection),
	(gnome_client_save_dialog_show):
	* gnome-client.h:
	* gnome-color-picker.c: (gnome_color_picker_new):
	* gnome-dateedit.c: (gnome_date_edit_new_flags):
	* gnome-dateedit.h:
	* gnome-dialog.c: (gnome_dialog_get_type),
	(gnome_dialog_class_init), (gnome_dialog_new), (gnome_dialog_newv):
	* gnome-dialog.h:
	* gnome-druid-page-edge.c: (gnome_druid_page_edge_setup),
	(gnome_druid_page_edge_new), (gnome_druid_page_edge_new_aa),
	(gnome_druid_page_edge_new_with_vals):