@@ -31,9 +31,6 @@
 
 G_BEGIN_DECLS
 
-#define GNOME_ICON_SIZE_TOOLBAR gnome_icon_size_toolbar
-extern GtkIconSize gnome_icon_size_toolbar;
-
 extern void init_gnome_stock_icons (void);
 
 #define GNOME_STOCK_TIMER "gnome-stock-timer"
